# nanochat

./: README.md  pyproject.toml
nanochat/: bdh.py  bdh_engine.py  checkpoint_manager.py  common.py  flash_attention.py  fp8.py  gpt.py
runs/: autorun.sh  bdh_base.sh  gpu_config_utils.sh  speedrun.sh  transformer_base.sh  transformer_baseline.sh
scripts/: base_eval.py  base_train.py  base_train_bdh.py
