[project]
name = "nanochat"
version = "0.1.0"
description = "the minimal full-stack ChatGPT clone"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.0.0",
    "fastapi>=0.117.1",
    "kernels>=0.11.7",
    "psutil>=7.1.0",
    "rustbpe>=0.1.0",
    "tiktoken>=0.11.0",
    "tokenizers>=0.22.0",
    "transformers>=4.57.3",
    "uvicorn>=0.36.0",
    "wandb>=0.21.3",
    "flash-linear-attention>=0.4.2",
    "einops>=0.8.1",
    "torch>=2.11",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "pytest>=8.0.0",
    "python-dotenv>=1.2.1",
    "transformers>=4.57.3",
]

[tool.pytest.ini_options]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# target torch to cuda 12.8, rocm6.4 or CPU
[tool.uv.sources]
torch = [
    { index = "pytorch-cu128-nightly", extra = "cuda" },
    { index = "pytorch-cu128-nightly", extra = "gpu" },   # gpu is an alias for cuda
    { index = "pytorch-cpu-nightly", extra = "cpu" },
    { index = "pytorch-rocm72-nightly", extra = "rocm" },
]
triton = [
    { index = "pytorch-cu128-nightly", extra = "cuda" },
    { index = "pytorch-cu128-nightly", extra = "gpu" },   # gpu is an alias for cuda
    { index = "pytorch-cpu-nightly", extra = "cpu" },
    { index = "pytorch-rocm72-nightly", extra = "rocm" },
]

pytorch-triton-rocm = [
    { index = "pytorch-rocm72-nightly", extra = "rocm", marker = "sys_platform == 'linux'" },
]
triton-rocm = [
    { index = "pytorch-rocm72-nightly", extra = "rocm", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-rocm72"
url = "https://download.pytorch.org/whl/rocm7.2"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm72-nightly"
url = "https://download.pytorch.org/whl/nightly/rocm7.2"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu-nightly"
url = "https://download.pytorch.org/whl/nightly/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128-nightly"
url = "https://download.pytorch.org/whl/nightly/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
rocm = [
    "torch>=2.11.0",
    "pytorch-triton-rocm>=3.6.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "triton-rocm>=3.6.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[project.optional-dependencies]
cpu = ["torch>=2.11.0", "triton>=3.6.0"]
cuda = ["torch>=2.11.0", "triton>=3.6.0"]
gpu = [
    "torch>=2.11.0",
    "triton>=3.6.0",
] # gpu is an alias for cuda (backward compatibility)
rocm = [
    "torch>=2.11.0",
    "triton>=3.6.0",
    "pytorch-triton-rocm>=3.6.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "triton-rocm>=3.6.0; sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv]
default-groups = []
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" },
        { extra = "gpu" },
        { extra = "rocm" },
    ],
]
environments = ['sys_platform=="linux"']
prerelease = "allow"
